--- a/login.css
+++ b/login.css
@@ -18,9 +18,34 @@ nav div{
     display:flex;
     align-self:center;
 }
-.loginbox {
-  display: flex;
+div.loginbox {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
+    width: 400px;
+    height: 450px;
+    background-color: #6e6e6e;
+    text-align: center;
+    border-radius: 20px;
+}
+div > h4, h5 {
+    margin: 0;
+}
+p1 {
+    display: block;
+    margin-top: 30px;
+}
+form > input {
+    display: block;
+    width: fit-content;
+    height: 40px;
+}
+div > h4, p1 {
+    color: blue;
 }
