--- a/login.css
+++ b/login.css
@@ -47,5 +47,17 @@ form > input {
     height: 40px;
 }
 div > h4, p1 {
-    color: blue;
+    color: rgb(75, 234, 255);
+}
+.btn {
+    height: 40px;
+    width: 60px;
+    background-color: rgb(0, 82, 175);
+    color: rgb(255, 255, 255);
+}
+.btn:hover {
+    background-color: #000c74;
+}
+.hover:hover {
+    color: #120079;
 }
